--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -4147,7 +4147,7 @@
       </notes>
       <segment>
         <source>Wir MÜSSEN Verteidigungsanlagen bauen. Falls Ressourcen dafür fehlen, geh in die Außenwelt (die Wüste außerhalb der Stadt) und suche danach.</source>
-        <target>Wir MÜSSEN Verteidigungsanlagen bauen. Falls Ressourcen dafür fehlen, geh in die Außenwelt (die Wüste außerhalb der Stadt) und suche danach.</target>
+        <target>Nous DEVONS construire d'avantage de défenses dans les chantiers ! Si des ressources manquent, fouillez l'Outre-monde (le désert autour de la ville) pour en dénicher.</target>
       </segment>
     </unit>
     <unit id="nsoY7Vf" name="{n} neue Beiträge in">
@@ -4158,7 +4158,7 @@
       </notes>
       <segment>
         <source>{n} neue Beiträge in</source>
-        <target>{n} neue Beiträge in</target>
+        <target>{n} nouvelles réponses dans</target>
       </segment>
     </unit>
     <unit id="o_0krUA" name="{n} oder mehr neue Beiträge in">
@@ -4169,7 +4169,7 @@
       </notes>
       <segment>
         <source>{n} oder mehr neue Beiträge in</source>
-        <target>{n} oder mehr neue Beiträge in</target>
+        <target>{n} nouvelles réponses ou plus dans</target>
       </segment>
     </unit>
     <unit id=".YY5QFh" name="und andere.">
@@ -4180,7 +4180,7 @@
       </notes>
       <segment>
         <source>und andere.</source>
-        <target>und andere.</target>
+        <target>et autres.</target>
       </segment>
     </unit>
   </file>
