--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -4175,7 +4175,7 @@
       </notes>
       <segment>
         <source>Wir MÜSSEN Verteidigungsanlagen bauen. Falls Ressourcen dafür fehlen, geh in die Außenwelt (die Wüste außerhalb der Stadt) und suche danach.</source>
-        <target>Wir MÜSSEN Verteidigungsanlagen bauen. Falls Ressourcen dafür fehlen, geh in die Außenwelt (die Wüste außerhalb der Stadt) und suche danach.</target>
+        <target>We MUST build more defensive constructions! If we're short of objects, go scavenging in the World Beyond (the desert surrounding the town) to discover them.</target>
       </segment>
     </unit>
     <unit id="nsoY7Vf" name="{n} neue Beiträge in">
