--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4405,5 +4405,27 @@
         <target>Ruin digs left:</target>
       </segment>
     </unit>
+    <unit id="nOcPaSS" name="Zurzeit in der Stadt">
+      <notes>
+        <note category="german">Zurzeit in der Stadt</note>
+        <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Zurzeit in der Stadt</source>
+        <target>Currently in town</target>
+      </segment>
+    </unit>
+    <unit id="jPmvEEG" name="Eternal-Twin-Konto verlinkt">
+      <notes>
+        <note category="german">Eternal-Twin-Konto verlinkt</note>
+        <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Eternal-Twin-Konto verlinkt</source>
+        <target>Linked Eternal-Twin account</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
