--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -23223,7 +23223,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Außerdem wäre es gut, daran zu denken, dass der Schamane der Stadt letzte Nacht gestorben ist. Heute Abend findet eine Neuwahl statt, bei der ein neuer Kandidat aus den Reihen der Überlebenden gewählt wird.</source>
-        <target>D'ailleurs il serait bon de ne pas oublier que le chaman de la ville est mort cette nuit. Une nouvelle élection aura lieu cette nuit pour un choisir un nouveau parmi les survivants.</target>
+        <target>D'ailleurs il serait bon de ne pas oublier que le chaman de la ville est mort cette nuit. Une nouvelle élection aura lieu cette nuit pour en choisir un nouveau parmi les survivants.</target>
       </segment>
     </unit>
     <unit id="EvR1zFN">
