--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -26176,5 +26176,16 @@
         <target>Against all odds, {citizen} seems to have been able to find something in the zone to survive on...</target>
       </segment>
     </unit>
+    <unit id="sDajFXt">
+      <notes>
+        <note category="german">Nachrichten &lt;strong&gt;ohne Titel&lt;/strong&gt; oder &lt;strong&gt;Text&lt;/strong&gt; können nicht versendet werden.</note>
+        <note category="from">twig:///templates/scripts/errors/messages.txt.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Nachrichten &lt;strong&gt;ohne Titel&lt;/strong&gt; oder &lt;strong&gt;Text&lt;/strong&gt; können nicht versendet werden.</source>
+        <target><![CDATA[You cannot send an <strong>empty message</strong> or a message with <strong>no subject</strong>...]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
