--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -664,7 +664,7 @@
       <notes>
         <note category="german">Users</note>
         <note category="state">new</note>
-        <note category="from">php:///src/Controller/Admin/AdminActionController.php</note>
+        <note category="from">php:///src/Controller/Admin/AdminActionController.php;twig:///templates/ajax/admin/users/all_index.html.twig</note>
       </notes>
       <segment>
         <source>Users</source>
@@ -684,7 +684,7 @@
     <unit id="jA6UdTz" name="Zukunft">
       <notes>
         <note category="german">Zukunft</note>
-        <note category="from">php:///src/Controller/Admin/AdminActionController.php</note>
+        <note category="from">php:///src/Controller/Admin/AdminActionController.php;twig:///templates/ajax/admin/changelogs/changelogs.html.twig</note>
       </notes>
       <segment>
         <source>Zukunft</source>
@@ -1529,7 +1529,7 @@
       <notes>
         <note category="german">AntiSpam</note>
         <note category="state">new</note>
-        <note category="from">php:///src/Controller/Admin/AdminActionController.php</note>
+        <note category="from">php:///src/Controller/Admin/AdminActionController.php;twig:///templates/ajax/admin/spam/domains.html.twig</note>
       </notes>
       <segment>
         <source>AntiSpam</source>
@@ -1924,7 +1924,7 @@
     <unit id="i2H25l5" name="Foren-Mod.">
       <notes>
         <note category="german">Foren-Mod.</note>
-        <note category="from">php:///src/Controller/Admin/AdminActionController.php</note>
+        <note category="from">php:///src/Controller/Admin/AdminActionController.php;twig:///templates/ajax/admin/reports/reports.html.twig</note>
       </notes>
       <segment>
         <source>Foren-Mod.</source>
@@ -4187,7 +4187,7 @@
     <unit id="NSeveUs" name="Dateisystem">
       <notes>
         <note category="german">Dateisystem</note>
-        <note category="from">php:///src/Controller/Admin/AdminActionController.php</note>
+        <note category="from">php:///src/Controller/Admin/AdminActionController.php;twig:///templates/ajax/admin/files/list.html.twig</note>
       </notes>
       <segment>
         <source>Dateisystem</source>
@@ -4409,7 +4409,6 @@
       <notes>
         <note category="german">Zurzeit in der Stadt</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Zurzeit in der Stadt</source>
@@ -4420,7 +4419,6 @@
       <notes>
         <note category="german">Eternal-Twin-Konto verlinkt</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Eternal-Twin-Konto verlinkt</source>
